# pds-migration-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json
.github/workflows/: build.yml  ci.yml  main.yml  release.yml
pdsmigration-common/: Cargo.toml
pdsmigration-common/src/: activate_account.rs  create_account.rs  deactivate_account.rs  errors.rs  export_all_blobs.rs  export_blobs.rs  export_pds.rs  import_pds.rs  lib.rs  migrate_plc.rs  migrate_preferences.rs  missing_blobs.rs  request_token.rs  service_auth.rs  upload_blobs.rs
pdsmigration-common/src/agent/: account.rs  auth.rs  blobs.rs  identity.rs  preferences.rs  repo.rs  types.rs
pdsmigration-common/tests/: agent_account.rs  agent_http.rs  blob_roundtrip.rs  export_blobs_edges.rs  repo_roundtrip.rs
pdsmigration-common/tests/common/: mod.rs
pdsmigration-gui/: Cargo.toml
pdsmigration-gui/src/: app.rs  lib.rs  log_viewer.rs  styles.rs
pdsmigration-gui/src/screens/: create_or_login_account.rs  migrate_plc.rs  old_login.rs
pdsmigration-web/: Cargo.toml
pdsmigration-web/src/: background_jobs.rs  config.rs  errors.rs  lib.rs  main.rs  openapi.rs
pdsmigration-web/src/api/: activate_account.rs  create_account.rs  deactivate_account.rs  export_blobs.rs  export_repo.rs  health.rs  import_repo.rs  jobs.rs  migrate_plc.rs  migrate_preferences.rs  missing_blobs.rs  mod.rs  request_token.rs  service_auth.rs  upload_blobs.rs
pdsmigration-web/src/middleware/: auth_token.rs  rate_limit.rs
pdsmigration-web/tests/: blob_jobs_deactivated_origin.rs  blob_jobs_failures.rs  blob_jobs_roundtrip.rs  blob_upload_timeout.rs  export_repo_job_http_lifecycle.rs  export_repo_sync_api.rs  integration_tests.rs  job_http_lifecycle.rs
pdsmigration-web/tests/common/: mod.rs
