[workspace]
members = ["pdsmigration-common",
    "pdsmigration-gui",
    "pdsmigration-web"]
resolver = "2"

[workspace.dependencies]
pdsmigration-common = { path = "pdsmigration-common", version = "0.1.0" }

tokio = "1.48.0"
reqwest = "0.12.22"
bsky-sdk = "0.1.24"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
derive_more = "2.0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures-util = "0.3.31"
ipld-core = "0.4.1"

pretty_assertions = "1.4.1"
mockall = "0.14.0"
tokio-test = "0.4.4"
wiremock = "0.6.2"

[profile.release]
debug = 2  # Or any level from 0 to 2

[profile.release-docker]
inherits = "release"
debug = 0
strip = "symbols"
lto = "thin"
codegen-units = 1