[package]
name = "pdsmigration-common"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"
publish = true
repository = "https://github.com/NorthskySocial/pds-migration"
description = "Common framework for PDS Migration"

[dependencies]
serde = { workspace = true }
bsky-sdk = { workspace = true }
ipld-core = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
derive_more = { workspace = true, features = ["display", "error"] }
futures-core = "0.3.31"
bytes = "1.10.0"
futures-util = { workspace = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
tokio = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
pretty_assertions = { workspace = true }