[package]
name = "pdsmigration-gui"
version = "0.2.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
flate2 = { workspace = true }
pdsmigration-common = { workspace = true }
derive_more = { version = "2.0.1", features = ["display"] }
bsky-sdk = "0.1.20"
egui = { version = "0.32" }
eframe = { version = "0.32", features = ["glow", "wgpu"] }
atrium-xrpc = "0.12.3"
zip = "4.1.0"
secp256k1 = { version = "0.31.0", features = ["rand", "global-context"] }
multibase = "0.9.1"
unsigned-varint = "0.8.0"
rand = "0.9.1"
egui_tracing = "0.2.6"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
egui_extras = { version = "0.32", features = ["default", "image"] }
egui-file-dialog = "0.12.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
base64ct = { version = "1.8.0", features = ["alloc"] }
sha2 = "0.10.9"
base64-url = "3.0.0"
serde_ipld_dagcbor = "0.6.3"
indexmap = { version = "2.10.0", features = ["serde"] }
cid = "0.11.1"
multihash = "0.19.3"
hex = "0.4.3"
ipld-core = "0.4.1"
rfd = "0.15.4"
reqwest = "0.12.22"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
tokio = { version = "1.43.1", features = ["rt-multi-thread", "time", "macros"] }

[dev-dependencies]
mockall = "0.13.0"
tokio-test = "0.4.4"
wiremock = "0.6.2"
pretty_assertions = "1.4.1"
