[package]
name = "pdsmigration-web"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"

[[bin]]
name = "pdsmigration-web"
path = "src/main.rs"

[lib]
name = "pdsmigration_web"
path = "src/lib.rs"

[dependencies]
flate2 = { workspace = true }
dotenvy = "0.15.7"
actix-rt = "2.10.0"
actix-web = "4.8.0"
bsky-sdk = "0.1.21"
tracing-actix-web = "0.7.19"
pdsmigration-common = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aws-config = { version = "1.5.14", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.70.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.14.0"
actix-web-prom = "0.10.0"
derive_more = { version = "2.0.1" }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "debug-embed"] }
futures-util = { version = "0.3.31" }
futures = { version = "0.3.31" }
actix-ws = "0.3.0"
tokio = "1.48.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
actix-web = { version = "4.8.0", features = ["macros"] }
actix-rt = "2.10.0"
pretty_assertions = "1.4.1"
serde_json = "1.0"
mockito = "1.4.0"
