[package]
name = "pdsmigration-web"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"

[[bin]]
name = "pdsmigration-web"
path = "src/main.rs"

[lib]
name = "pdsmigration_web"
path = "src/lib.rs"
doctest = false

[dependencies]
dotenvy = "0.15.7"
actix-rt = "2.10.0"
actix-web = "4.8.0"
bsky-sdk = { workspace = true }
tracing-actix-web = "0.7.19"
pdsmigration-common = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-config = { version = "1.5.14", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.70.0"
serde = { workspace = true }
serde_json = { workspace = true }
actix-web-prom = "0.10.0"
derive_more = { workspace = true }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "debug-embed"] }
futures-util = { workspace = true }
futures = "0.3.31"
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
actix-web = { version = "4.8.0", features = ["macros"] }
actix-rt = "2.10.0"
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
mockito = "1.4.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6.2"
